--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.5",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6"
